--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 <p><strong>Phone:</strong> 9541999046</p>
                 <p><strong>Email:</strong> saqib9796@gmail.com</p>
                 <div class="map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d119.71816199257992!2d74.81444285693818!3d34.06250185982866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38e18f0f74d63bd7%3A0x1871a4fc527080a4!2sBatamloo%2C%20Srinagar%2C%20Jammu%20and%20Kashmir%20190009!5e0!3m2!1sen!2sin!4v1697016578248!5m2!1sen!2sin" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3304.8115904416954!2d74.78614907571742!3d34.07434377314878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzTCsDA0JzI3LjYiTiA3NMKwNDcnMTkuNCJF!5e0!3m2!1sen!2sin!4v1735834991785!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </section>
